incluido imagem de usuário e campo email
Ambos estilizados com CSS.

--- a/login.html
+++ b/login.html
@@ -9,7 +9,15 @@
 <body>
     <form class="form" action="">
         <div class="card">
-            teste
+            <div class="card-top">
+                <img class="img-login" src="imagens/user.png" alt="">
+                <h2 class="title">Painel de Controle</h2>
+                <p>Gerenciar seu Negócio</p>
+            </div>
+            <div class="card-group">
+                <label>Email</label>
+                <input type="email" name="email">
+            </div>
         </div>
     </form>
 </body>
