--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <form class="form" action="#">
+    <form class="form" action="logar.php" method="POST">
         <div class="card">
             <div class="card-top">
                 <img class="img-login" src="imagens/user.png" alt="">
